# recoverbull-server

./: Cargo.toml  README  README.md  diesel.toml
migrations/0001_schema/: down.sql  up.sql
src/: app_state.rs  database.rs  env.rs  handlers.rs  main.rs  models.rs  nip44.rs  router.rs  schema.rs  schnorr.rs  utils.rs
src/handlers/: fetch.rs  info.rs  mod.rs  recover.rs  recover_key.rs  store.rs  store_key.rs
src/tests/: mod.rs  test_fetch.rs  test_fetch_key.rs  test_info.rs  test_recover_key.rs  test_schnorr.rs  test_server.rs  test_store.rs  test_store_key.rs  test_trash.rs
